--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,11 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi[standard]>=0.118.0",
+    "passlib[bcrypt]>=1.7.4",
+    "psycopg2-binary>=2.9.10",
+    "pydantic-settings>=2.11.0",
+    "python-jose>=3.5.0",
+    "sqlmodel>=0.0.25",
     "uvicorn>=0.37.0",
 ]
 
