--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,24 @@ node_modules/
 # Python
 __pycache__/
 *.pyc
+*.pyo
+*.pyd
+.Python
+*.so
+*.egg
+*.egg-info/
+dist/
+build/
+.venv/
+venv/
+ENV/
+
+# Environment variables
+.env
 
 # VSCode
 .vscode/
+
+# Database
+*.db
+*.sqlite
